# rana

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  archs  cross-compile.sh
keys/: negrunch.asc
src/: cli.rs  lib.rs  main.rs  mnemonic.rs  tests.rs  utils.rs
