[package]
name = "rana"
version = "0.3.7"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Nostr public key mining tool"
repository = "https://github.com/grunch/rana"
keywords = ["nostr", "mining", "pubkeys", "bech32"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.15", features = ["env", "default", "derive"] }
bech32 = "0.9.1"
bitcoin_hashes = "0.11.0"
hex = "0.4.3"
regex = "1"
secp256k1 = { version = "0.25.0", features = ["rand-std"] }
num_cpus = "1.1"
qrcode = { version = "0.12", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
