[package]
name = "rana"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Nostr public key mining tool"
repository = "https://github.com/grunch/rana"
keywords = ["nostr", "mining", "pubkeys", "bech32"]
readme = "README.md"

[dependencies]
bip39 = "1.0"
clap = { version = "4.0.15", features = ["env", "default", "derive"] }
regex = "1"
num_cpus = "1.1"
nostr = { version = "0.17", default-features = false, features = ["nip06", "nip19"] }
qrcode = { version = "0.12", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
